syntax = "proto3";

option java_package = "com.ljq.demo.springboot.mybatisplus.model.entity";
option java_outer_classname = "StudentPb";

// 学生信息
message Student {

  // id
  int64 id = 1;
  // 姓名
  string name = 2;
  // 出生日期(时间戳)
  int32 birthDate = 3;
}

// 班级信息
message ClassInfo {

  // id
  int64 id = 1;
  // 年级
  int32 grade = 2;
  // 班级编号
  int32 number = 3;

}

// 学生选修课
message ElectiveCourse {

  // 学生 id
  int64 stuId = 1;
  // 课程名称
  repeated string courseName = 2;

}

// 学生班级信息
message StudentClass {

  // id
  int64 id = 1;
  // 学生信息
  Student student = 2;
  // 班级信息
  ClassInfo classInfo = 3;

}

// 性别
message StudentSex {
  enum Sex{
    MAN = 0;
    WOMEN = 1;
  }
  Sex sex = 2;
}
